Istio/Calculator/basicop/subtract/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: subtract
  namespace: <PROJECT>
  labels:
    app: subtract
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: subtract
